# EnceladusPlume

./: .gitignore  README.md
cpp/: README.md
enceladus_plume/: CONSTANTS_AUDIT.md  README.md  analyze_profile_shapes.py  make_figures.py  make_schema_fig.py  plot_regimes.py  pyproject.toml  requirements.txt  run_fit.py  run_full.py  run_massflux_validation.py  run_modular.py  run_peaks.py  run_pipeline.py  run_pipeline.sh  run_wall_budget.py  run_wall_geometry.py
enceladus_plume/config/: default.yaml  run_config.yaml  run_config_zoom.yaml  run_config_zoom_double_cosine.yaml  run_config_zoom_double_cosine_probe.yaml  run_config_zoom_shifted_double_cosine_probe.yaml  run_config_zoom_shifted_double_cosine_probe_scale3_phase30.yaml  run_config_zoom_shifted_double_cosine_probe_scale4_phase45.yaml  run_config_zoom_shifted_double_cosine_refine.yaml
enceladus_plume/data/: README.md  digitize_fig1.py  observed_diurnal.csv
enceladus_plume/enceladus_plume/: __init__.py  _native.py  config.py  friction.py  peaks.py  physics.py  utils.py  wall_budget.py  wall_geometry.py
enceladus_plume/enceladus_plume/gas_dynamics/: interpolator.py  lookup.py  solver.py
enceladus_plume/enceladus_plume/heat_diffusion/: solver.py
enceladus_plume/enceladus_plume/liquid_dynamics/: helpers.py  solver.py  tapered.py
enceladus_plume/enceladus_plume/workflows/: full_solver.py  modular_solver.py
enceladus_plume/tests/: test_friction.py  test_gas.py  test_liquid.py  test_native_parity.py  test_peaks.py  test_physics.py  test_tapered.py  test_wall_budget.py  test_wall_geometry.py
(+19 files in other folders)
